--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <main class="content">
         <form class="content__form" action="">
           <div class="div-cep">
-            <label class="label-cep"> CEP: <input class="input-cep" onblur="buscaCep()" onfocus="cepFocused()" type="text" placeholder="00000-000" /><img class="check-icon invisible" src="./assets/img/check.svg"/></label>
+            <label class="label-cep"> CEP: <input class="input-cep" onblur="buscaCep()" onfocus="cepFocused()" type="text" placeholder="00000-000" autocomplete="off" /><img class="check-icon invisible" src="./assets/img/check.svg"/></label>
               <svg class="loading invisible" height="30" width="30">
                 <circle cx="15" cy="15" r="10" stroke="black" stroke-width="3" fill="transparent" />
               </svg>
